<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Menus</string>
    <string name="hello_world">Hello, we have created a new menu!</string>
    <string name="action_settings">Settings</string>
    <string name="option_welcome">Welcome</string>
    <string name="option_about">About</string>
    <string name="option_options">Options</string>
    <string name="option_exit">Exit</string>
    <string name="option_options_theme">Theme</string>
    <string name="option_options_sound">Sound</string>
    <string name="ctop_red">Red</string>
    <string name="ctop_green">Green</string>
    <string name="ctop_blue">Blue</string>

</resources>
